[package]
name = "base"
version = "0.1.0"
authors = ["John"]
license = "Unlicense"
homepage = ''
repository = ''
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = '3.0.0' }
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
sp-core = { version = "3", default-features = false }
sp-runtime = { version = "3", default-features = false }
sp-std = { version = "3", default-features = false }
static_assertions = "1.1.0"

[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'frame-support/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
]