[package]
edition = '2018'
authors = ['John']
license = "Unlicense"
homepage = ''
repository = ''
name = 'pallet-pool-manager'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
frame-support = { version = "3", default-features = false }
frame-system = { version = "3", default-features = false }
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
sp-core = { version = "3", default-features = false }
sp-runtime = { version = "3", default-features = false }
sp-std = { version = "3", default-features = false }
base = { path = "../../base", default-features = false }
pallet-pool-amm = { path = '../pool-amm', default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
    'frame-system/std',
	'serde',
	'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
	'base/std',
	'pallet-pool-amm/std',
]
runtime-benchmarks = [
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
