[package]
edition = '2018'
authors = ['John']
license = "Unlicense"
homepage = ''
repository = ''
name = 'pallet-fungible-asset'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
currencies = { version = "0.4", package = "orml-currencies", default-features = false }
frame-support = { version = "3", default-features = false }
frame-system = { version = "3", default-features = false }
hex-literal = "0.3.1"
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
sp-core = { version = "3", default-features = false }
sp-runtime = { version = "3", default-features = false }
sp-std = { version = "3", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokens = { version = "0.4", package = "orml-tokens", default-features = false }
traits = { version = "0.4", package = "orml-traits", default-features = false }
base = { path = "../../base", default-features = false }

[dev-dependencies]
pallet-balances = { version = "3", default-features = false }
sp-io = { version = "3", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'currencies/std',
    'frame-support/std',
    'frame-system/std',
    'serde',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std',
    'tokens/std',
    'traits/std',
	'base/std',
]
runtime-benchmarks = [
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]
